<?xml version="1.0"?>
<package format="2">
    <name>orb_odometry</name>
    <version>0.0.1</version>
    <description>ORB-SLAM 2 Odometry package</description>

    <maintainer email="lukas.bernreiter@mavt.ethz.ch">Lukas Bernreiter</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>glog_catkin</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>
    <depend>doxygen_catkin</depend>
    <depend>gflags_catkin</depend>
    <depend>opencv3_catkin</depend>
    <depend>eigen_catkin</depend>

</package>

